--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
+    <link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png" />
+    <link rel="manifest" href="/images/icons/site.webmanifest" />
+    <meta name="theme-color" content="#3B82F6" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contractor App</title>
+    <title>BuildCraftPro</title>
   </head>
   <body>
     <div id="root"></div>
